@@ -49,6 +49,7 @@ client.commandwarn = [accent]{0} [scarlet]set command center at ({1}, {2}) to {3
 client.teleport = Teleport Here
 client.connected = [accent]{0}[accent] has connected.
 client.disconnected = [accent]{0}[accent] has disconnected.
+client.globalsearch = [lightgray]Search for games globally
 
 client.command.help.description = Lists all client commands
 client.command.unit.description = Swap to specified unit
