@@ -48,7 +48,9 @@ public class PositionWaypoint extends Waypoint implements Position {
             player.unit().trns(vec);
             player.snapInterpolation();
         } else {
-            float length = circleLength <= 0.001f ? 1f : Mathf.clamp((player.unit().dst(target) - circleLength - (player.unit().formation == null ? 0f : player.unit().formation.pattern.radius())) / smooth, -1f, 1f);
+            float length = circleLength <= 0.001f ? 1f : Mathf.clamp((player.unit().dst(target) - circleLength) / smooth, -1f, 1f);
+//             TODO: Remove line below if line above works good
+//            float length = circleLength <= 0.001f ? 1f : Mathf.clamp((player.unit().dst(target) - circleLength - (player.unit().formation == null ? 0f : player.unit().formation.pattern.radius())) / smooth, -1f, 1f);
             vec.setLength(player.unit().realSpeed() * length);
             if (length < -0.5f) vec.rotate(180f);
             else if (length < 0) vec.setZero();
