@@ -259,7 +259,6 @@ public class HudFragment extends Fragment{
                 info.name = "fps/ping";
                 info.touchable = Touchable.disabled;
                 info.top().left().margin(4).visible(() -> Core.settings.getBool("fps") && shown);
-                info.update(() -> info.setTranslation(state.isGame() || state.isEditor() ? 0f : -Scl.scl(dsize * 4 + 3), 0));
                 IntFormat fps = new IntFormat("fps");
                 IntFormat ping = new IntFormat("ping");
                 IntFormat mem = new IntFormat("memory");
@@ -637,7 +636,6 @@ public class HudFragment extends Fragment{
         StringBuilder builder = new StringBuilder();
 
         table.name = "waves";
-
         table.marginTop(0).marginBottom(4).marginLeft(4);
 
         class SideBar extends Element{
